[package]
name = "ap"
version = "0.1.0"
authors = ["biluohc <biluohc@qq.com>"]

[dependencies]

[profile.release]
debug = true 

# http://blog.adamperry.me/rust/2016/07/24/profiling-rust-perf-flamegraph/#perf
#0 git clone https://github.com/brendangregg/FlameGraph
# and link -s stackcollapse-perf.pl flamegraph.pl to PATH

# 1
# [profile.release]
# debug = true 

#2  cargo br
#3  sudo perf record -g /home/mxo/.cache/mozilla/cargo/release/ap; and  sudo chmod 777 *data; and perf script  |stackcollapse-perf.pl | flamegraph.pl > flame.svg
# 每次取样数可能不同, 不够就没有什么信息, 另外可以配合 #[no_mangle] 使用
